--- a/exhibition/package.json
+++ b/exhibition/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
